// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OIbPassword check Password with help 1`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="input-group"
    >
      <input
        class="oi-form-input form-control"
        id="name"
        name="name"
        type="password"
        value="password"
      />
    </div>
    <div
      class="invalid-feedback"
      style="display: inline;"
    />
    <small
      class="form-text text-muted"
    >
      <div>
        help text
      </div>
    </small>
  </div>
</div>
`;

exports[`OIbPassword check Password with no label 1`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="input-group"
    >
      <input
        class="oi-form-input form-control"
        id="name"
        name="name"
        type="password"
        value="password"
      />
    </div>
    <div
      class="invalid-feedback"
      style="display: inline;"
    />
  </div>
</div>
`;

exports[`OIbPassword check Password with too short value 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class=""
      for="name"
    >
      label
    </label>
    <div
      class="input-group"
    >
      <input
        class="oi-form-input form-control"
        id="name"
        name="name"
        type="password"
        value="password"
      />
    </div>
    <div
      class="invalid-feedback"
      style="display: inline;"
    />
  </div>
</div>
`;

exports[`OIbPassword check Password with value="a password" 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class=""
      for="name"
    >
      label
    </label>
    <div
      class="input-group"
    >
      <input
        class="oi-form-input form-control"
        id="name"
        name="name"
        type="password"
        value="a text"
      />
    </div>
    <div
      class="invalid-feedback"
      style="display: inline;"
    />
  </div>
</div>
`;
